made part 2 with a similar approach

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "part1": "node part1/index.js",
+    "part2": "node part2/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "zanchho",
   "license": "ISC"
 }
