finished Day 1+ (4part1)

--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "part1": "node part1/index.js",
-    "part2": "node part2/index.js"
+    "d1": "node day1/part1-2/index.js",
+    "d3p1": "node day3/part1/index.js",
+    "d3p2": "node day3/part2/index.js",
+    "d4": "node day4/index.js"
   },
-  "keywords": [],
+  "keywords": [
+    "aoc",
+    "js"
+  ],
   "author": "zanchho",
   "license": "ISC"
 }
